// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse > EOF in linked modifier: "@." 1`] = `
{
  "body": {
    "end": 2,
    "items": [
      {
        "end": 2,
        "key": {
          "end": 2,
          "loc": {
            "end": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "start": 2,
          "type": 7,
          "value": "",
        },
        "loc": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "modifier": {
          "end": 1,
          "loc": {
            "end": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "start": 1,
          "type": 8,
          "value": "",
        },
        "start": 0,
        "type": 6,
      },
    ],
    "loc": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 2,
  "loc": {
    "end": {
      "column": 3,
      "line": 1,
      "offset": 2,
    },
    "source": "@.",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > EOF in linked modifier: "@." errors 1`] = `
[
  {
    "code": 12,
    "domain": "parser",
    "location": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "message": "Unexpected empty linked modifier",
  },
  {
    "code": 14,
    "domain": "parser",
    "location": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "message": "Unexpected lexical analysis in token: 'EOF'",
  },
  {
    "code": 13,
    "domain": "parser",
    "location": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "message": "Unexpected empty linked key",
  },
]
`;

exports[`parse > empty plural: "|" 1`] = `
{
  "body": {
    "cases": [
      {
        "end": 0,
        "items": [],
        "loc": {
          "end": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 1,
        "items": [],
        "loc": {
          "end": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "start": 1,
        "type": 2,
      },
    ],
    "end": 1,
    "loc": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 1,
  "loc": {
    "end": {
      "column": 2,
      "line": 1,
      "offset": 1,
    },
    "source": "|",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > empty plural: "|" errors 1`] = `
[
  {
    "code": 11,
    "domain": "parser",
    "location": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "message": "Plural must have messages",
  },
]
`;

exports[`parse > linked error: "@.: a" 1`] = `
{
  "body": {
    "end": 5,
    "items": [
      {
        "end": 3,
        "key": {
          "end": 3,
          "loc": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "start": 3,
          "type": 7,
          "value": "",
        },
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "modifier": {
          "end": 1,
          "loc": {
            "end": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "start": 1,
          "type": 8,
          "value": "",
        },
        "start": 0,
        "type": 6,
      },
      {
        "end": 5,
        "loc": {
          "end": {
            "column": 6,
            "line": 1,
            "offset": 5,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "start": 3,
        "type": 3,
        "value": " a",
      },
    ],
    "loc": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 5,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "source": "@.: a",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > linked error: "@.: a" errors 1`] = `
[
  {
    "code": 12,
    "domain": "parser",
    "location": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "message": "Unexpected empty linked modifier",
  },
  {
    "code": 10,
    "domain": "tokenizer",
    "location": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "message": "Invalid linked format",
  },
  {
    "code": 13,
    "domain": "parser",
    "location": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "message": "Unexpected empty linked key",
  },
]
`;

exports[`parse > linked key paren error with modifier: "@.lower:(foo)" 1`] = `
{
  "body": {
    "end": 13,
    "items": [
      {
        "end": 8,
        "key": {
          "end": 8,
          "loc": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "start": 8,
          "type": 7,
          "value": "",
        },
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "modifier": {
          "end": 7,
          "loc": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "start": 1,
          "type": 8,
          "value": "lower",
        },
        "start": 0,
        "type": 6,
      },
      {
        "end": 13,
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
        },
        "start": 8,
        "type": 3,
        "value": "(foo)",
      },
    ],
    "loc": {
      "end": {
        "column": 14,
        "line": 1,
        "offset": 13,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 13,
  "loc": {
    "end": {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "source": "@.lower:(foo)",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > linked key paren error: "@:(foo)" 1`] = `
{
  "body": {
    "end": 7,
    "items": [
      {
        "end": 2,
        "key": {
          "end": 2,
          "loc": {
            "end": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "start": 2,
          "type": 7,
          "value": "",
        },
        "loc": {
          "end": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 6,
      },
      {
        "end": 7,
        "loc": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "start": 2,
        "type": 3,
        "value": "(foo)",
      },
    ],
    "loc": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 7,
  "loc": {
    "end": {
      "column": 8,
      "line": 1,
      "offset": 7,
    },
    "source": "@:(foo)",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > linked key with named and modifier: "hi @._upper:{_name} !" 1`] = `
{
  "body": {
    "end": 21,
    "items": [
      {
        "end": 3,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hi ",
      },
      {
        "end": 19,
        "key": {
          "end": 19,
          "key": "_name",
          "loc": {
            "end": {
              "column": 20,
              "line": 1,
              "offset": 19,
            },
            "start": {
              "column": 13,
              "line": 1,
              "offset": 12,
            },
          },
          "start": 12,
          "type": 4,
        },
        "loc": {
          "end": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
          "start": {
            "column": 4,
            "line": 1,
            "offset": 3,
          },
        },
        "modifier": {
          "end": 11,
          "loc": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "start": 4,
          "type": 8,
          "value": "_upper",
        },
        "start": 3,
        "type": 6,
      },
      {
        "end": 21,
        "loc": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
        },
        "start": 19,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 21,
  "loc": {
    "end": {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "source": "hi @._upper:{_name} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > linked modifier error: "@.:foo" 1`] = `
{
  "body": {
    "end": 6,
    "items": [
      {
        "end": 6,
        "key": {
          "end": 6,
          "loc": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "start": 3,
          "type": 7,
          "value": "foo",
        },
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "modifier": {
          "end": 1,
          "loc": {
            "end": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "start": 1,
          "type": 8,
          "value": "",
        },
        "start": 0,
        "type": 6,
      },
    ],
    "loc": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 6,
  "loc": {
    "end": {
      "column": 7,
      "line": 1,
      "offset": 6,
    },
    "source": "@.:foo",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > linked modifier error: "@.:foo" errors 1`] = `
[
  {
    "code": 12,
    "domain": "parser",
    "location": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "message": "Unexpected empty linked modifier",
  },
]
`;

exports[`parse > linked modifier list: "@.lower:{0}" 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 11,
        "key": {
          "end": 11,
          "index": 0,
          "loc": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "start": 8,
          "type": 5,
        },
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "modifier": {
          "end": 7,
          "loc": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "start": 1,
          "type": 8,
          "value": "lower",
        },
        "start": 0,
        "type": 6,
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "@.lower:{0}",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > linked: "@:apples" 1`] = `
{
  "body": {
    "end": 8,
    "items": [
      {
        "end": 8,
        "key": {
          "end": 8,
          "loc": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "start": 2,
          "type": 7,
          "value": "apples",
        },
        "loc": {
          "end": {
            "column": 9,
            "line": 1,
            "offset": 8,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 6,
      },
    ],
    "loc": {
      "end": {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 8,
  "loc": {
    "end": {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "source": "@:apples",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > list: "hello {0} !" 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 6,
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello ",
      },
      {
        "end": 9,
        "index": 0,
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 5,
      },
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "start": 9,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hello {0} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > literal: "hello {'kazupon'} !" 1`] = `
{
  "body": {
    "end": 19,
    "items": [
      {
        "end": 6,
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello ",
      },
      {
        "end": 17,
        "loc": {
          "end": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 9,
        "value": "kazupon",
      },
      {
        "end": 19,
        "loc": {
          "end": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
          "start": {
            "column": 18,
            "line": 1,
            "offset": 17,
          },
        },
        "start": 17,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 19,
  "loc": {
    "end": {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "source": "hello {'kazupon'} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > message: "hello world" 1`] = `
{
  "body": {
    "end": 11,
    "items": [
      {
        "end": 11,
        "loc": {
          "end": {
            "column": 12,
            "line": 1,
            "offset": 11,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello world",
      },
    ],
    "loc": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 11,
  "loc": {
    "end": {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "source": "hello world",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > named: "hello {_name} !" 1`] = `
{
  "body": {
    "end": 15,
    "items": [
      {
        "end": 6,
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello ",
      },
      {
        "end": 13,
        "key": "_name",
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 4,
      },
      {
        "end": 15,
        "loc": {
          "end": {
            "column": 16,
            "line": 1,
            "offset": 15,
          },
          "start": {
            "column": 14,
            "line": 1,
            "offset": 13,
          },
        },
        "start": 13,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 15,
  "loc": {
    "end": {
      "column": 16,
      "line": 1,
      "offset": 15,
    },
    "source": "hello {_name} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > named: "hello {name} !" 1`] = `
{
  "body": {
    "end": 14,
    "items": [
      {
        "end": 6,
        "loc": {
          "end": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 3,
        "value": "hello ",
      },
      {
        "end": 12,
        "key": "name",
        "loc": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "start": 6,
        "type": 4,
      },
      {
        "end": 14,
        "loc": {
          "end": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 3,
        "value": " !",
      },
    ],
    "loc": {
      "end": {
        "column": 15,
        "line": 1,
        "offset": 14,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 2,
  },
  "end": 14,
  "loc": {
    "end": {
      "column": 15,
      "line": 1,
      "offset": 14,
    },
    "source": "hello {name} !",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > plural complex: "@.lower:{'no apples'} | {1} apple | {count}　apples" 1`] = `
{
  "body": {
    "cases": [
      {
        "end": 20,
        "items": [
          {
            "end": 21,
            "key": {
              "end": 21,
              "loc": {
                "end": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
              },
              "start": 8,
              "type": 9,
              "value": "no apples",
            },
            "loc": {
              "end": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "modifier": {
              "end": 7,
              "loc": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "start": 1,
              "type": 8,
              "value": "lower",
            },
            "start": 0,
            "type": 6,
          },
        ],
        "loc": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 27,
        "items": [
          {
            "end": 27,
            "index": 1,
            "loc": {
              "end": {
                "column": 28,
                "line": 1,
                "offset": 27,
              },
              "start": {
                "column": 25,
                "line": 1,
                "offset": 24,
              },
            },
            "start": 24,
            "type": 5,
          },
          {
            "end": 33,
            "loc": {
              "end": {
                "column": 34,
                "line": 1,
                "offset": 33,
              },
              "start": {
                "column": 28,
                "line": 1,
                "offset": 27,
              },
            },
            "start": 27,
            "type": 3,
            "value": " apple",
          },
        ],
        "loc": {
          "end": {
            "column": 34,
            "line": 1,
            "offset": 33,
          },
          "start": {
            "column": 25,
            "line": 1,
            "offset": 24,
          },
        },
        "start": 24,
        "type": 2,
      },
      {
        "end": 50,
        "items": [
          {
            "end": 43,
            "key": "count",
            "loc": {
              "end": {
                "column": 44,
                "line": 1,
                "offset": 43,
              },
              "start": {
                "column": 37,
                "line": 1,
                "offset": 36,
              },
            },
            "start": 36,
            "type": 4,
          },
          {
            "end": 50,
            "loc": {
              "end": {
                "column": 51,
                "line": 1,
                "offset": 50,
              },
              "start": {
                "column": 44,
                "line": 1,
                "offset": 43,
              },
            },
            "start": 43,
            "type": 3,
            "value": "　apples",
          },
        ],
        "loc": {
          "end": {
            "column": 51,
            "line": 1,
            "offset": 50,
          },
          "start": {
            "column": 37,
            "line": 1,
            "offset": 36,
          },
        },
        "start": 36,
        "type": 2,
      },
    ],
    "end": 50,
    "loc": {
      "end": {
        "column": 51,
        "line": 1,
        "offset": 50,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 50,
  "loc": {
    "end": {
      "column": 51,
      "line": 1,
      "offset": 50,
    },
    "source": "@.lower:{'no apples'} | {1} apple | {count}　apples",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parse > plural: "no apples | one apple  |  too much apples  " 1`] = `
{
  "body": {
    "cases": [
      {
        "end": 0,
        "items": [
          {
            "end": 9,
            "loc": {
              "end": {
                "column": 10,
                "line": 1,
                "offset": 9,
              },
              "start": {
                "column": 1,
                "line": 1,
                "offset": 0,
              },
            },
            "start": 0,
            "type": 3,
            "value": "no apples",
          },
        ],
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
          "start": {
            "column": 1,
            "line": 1,
            "offset": 0,
          },
        },
        "start": 0,
        "type": 2,
      },
      {
        "end": 12,
        "items": [
          {
            "end": 21,
            "loc": {
              "end": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
              "start": {
                "column": 13,
                "line": 1,
                "offset": 12,
              },
            },
            "start": 12,
            "type": 3,
            "value": "one apple",
          },
        ],
        "loc": {
          "end": {
            "column": 22,
            "line": 1,
            "offset": 21,
          },
          "start": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
        },
        "start": 12,
        "type": 2,
      },
      {
        "end": 43,
        "items": [
          {
            "end": 43,
            "loc": {
              "end": {
                "column": 44,
                "line": 1,
                "offset": 43,
              },
              "start": {
                "column": 27,
                "line": 1,
                "offset": 26,
              },
            },
            "start": 26,
            "type": 3,
            "value": "too much apples  ",
          },
        ],
        "loc": {
          "end": {
            "column": 44,
            "line": 1,
            "offset": 43,
          },
          "start": {
            "column": 27,
            "line": 1,
            "offset": 26,
          },
        },
        "start": 26,
        "type": 2,
      },
    ],
    "end": 43,
    "loc": {
      "end": {
        "column": 44,
        "line": 1,
        "offset": 43,
      },
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "start": 0,
    "type": 1,
  },
  "end": 43,
  "loc": {
    "end": {
      "column": 44,
      "line": 1,
      "offset": 43,
    },
    "source": "no apples | one apple  |  too much apples  ",
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "start": 0,
  "type": 0,
}
`;

exports[`parser options > location disable > EOF in linked modifier: "@." 1`] = `
{
  "body": {
    "items": [
      {
        "key": {
          "type": 7,
          "value": "",
        },
        "modifier": {
          "type": 8,
          "value": "",
        },
        "type": 6,
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > EOF in linked modifier: "@." errors 1`] = `
[
  {
    "code": 12,
    "domain": "parser",
    "message": "Unexpected empty linked modifier",
  },
  {
    "code": 14,
    "domain": "parser",
    "message": "Unexpected lexical analysis in token: 'EOF'",
  },
  {
    "code": 13,
    "domain": "parser",
    "message": "Unexpected empty linked key",
  },
]
`;

exports[`parser options > location disable > empty plural: "|" 1`] = `
{
  "body": {
    "cases": [
      {
        "items": [],
        "type": 2,
      },
      {
        "items": [],
        "type": 2,
      },
    ],
    "type": 1,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > empty plural: "|" errors 1`] = `
[
  {
    "code": 11,
    "domain": "parser",
    "message": "Plural must have messages",
  },
]
`;

exports[`parser options > location disable > linked error: "@.: a" 1`] = `
{
  "body": {
    "items": [
      {
        "key": {
          "type": 7,
          "value": "",
        },
        "modifier": {
          "type": 8,
          "value": "",
        },
        "type": 6,
      },
      {
        "type": 3,
        "value": " a",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > linked error: "@.: a" errors 1`] = `
[
  {
    "code": 12,
    "domain": "parser",
    "message": "Unexpected empty linked modifier",
  },
  {
    "code": 10,
    "domain": "tokenizer",
    "message": "Invalid linked format",
  },
  {
    "code": 13,
    "domain": "parser",
    "message": "Unexpected empty linked key",
  },
]
`;

exports[`parser options > location disable > linked key paren error with modifier: "@.lower:(foo)" 1`] = `
{
  "body": {
    "items": [
      {
        "key": {
          "type": 7,
          "value": "",
        },
        "modifier": {
          "type": 8,
          "value": "lower",
        },
        "type": 6,
      },
      {
        "type": 3,
        "value": "(foo)",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > linked key paren error: "@:(foo)" 1`] = `
{
  "body": {
    "items": [
      {
        "key": {
          "type": 7,
          "value": "",
        },
        "type": 6,
      },
      {
        "type": 3,
        "value": "(foo)",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > linked key with named and modifier: "hi @._upper:{_name} !" 1`] = `
{
  "body": {
    "items": [
      {
        "type": 3,
        "value": "hi ",
      },
      {
        "key": {
          "key": "_name",
          "type": 4,
        },
        "modifier": {
          "type": 8,
          "value": "_upper",
        },
        "type": 6,
      },
      {
        "type": 3,
        "value": " !",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > linked modifier error: "@.:foo" 1`] = `
{
  "body": {
    "items": [
      {
        "key": {
          "type": 7,
          "value": "foo",
        },
        "modifier": {
          "type": 8,
          "value": "",
        },
        "type": 6,
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > linked modifier error: "@.:foo" errors 1`] = `
[
  {
    "code": 12,
    "domain": "parser",
    "message": "Unexpected empty linked modifier",
  },
]
`;

exports[`parser options > location disable > linked modifier list: "@.lower:{0}" 1`] = `
{
  "body": {
    "items": [
      {
        "key": {
          "index": 0,
          "type": 5,
        },
        "modifier": {
          "type": 8,
          "value": "lower",
        },
        "type": 6,
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > linked: "@:apples" 1`] = `
{
  "body": {
    "items": [
      {
        "key": {
          "type": 7,
          "value": "apples",
        },
        "type": 6,
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > list: "hello {0} !" 1`] = `
{
  "body": {
    "items": [
      {
        "type": 3,
        "value": "hello ",
      },
      {
        "index": 0,
        "type": 5,
      },
      {
        "type": 3,
        "value": " !",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > literal: "hello {'kazupon'} !" 1`] = `
{
  "body": {
    "items": [
      {
        "type": 3,
        "value": "hello ",
      },
      {
        "type": 9,
        "value": "kazupon",
      },
      {
        "type": 3,
        "value": " !",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > message: "hello world" 1`] = `
{
  "body": {
    "items": [
      {
        "type": 3,
        "value": "hello world",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > named: "hello {_name} !" 1`] = `
{
  "body": {
    "items": [
      {
        "type": 3,
        "value": "hello ",
      },
      {
        "key": "_name",
        "type": 4,
      },
      {
        "type": 3,
        "value": " !",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > named: "hello {name} !" 1`] = `
{
  "body": {
    "items": [
      {
        "type": 3,
        "value": "hello ",
      },
      {
        "key": "name",
        "type": 4,
      },
      {
        "type": 3,
        "value": " !",
      },
    ],
    "type": 2,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > plural complex: "@.lower:{'no apples'} | {1} apple | {count}　apples" 1`] = `
{
  "body": {
    "cases": [
      {
        "items": [
          {
            "key": {
              "type": 9,
              "value": "no apples",
            },
            "modifier": {
              "type": 8,
              "value": "lower",
            },
            "type": 6,
          },
        ],
        "type": 2,
      },
      {
        "items": [
          {
            "index": 1,
            "type": 5,
          },
          {
            "type": 3,
            "value": " apple",
          },
        ],
        "type": 2,
      },
      {
        "items": [
          {
            "key": "count",
            "type": 4,
          },
          {
            "type": 3,
            "value": "　apples",
          },
        ],
        "type": 2,
      },
    ],
    "type": 1,
  },
  "type": 0,
}
`;

exports[`parser options > location disable > plural: "no apples | one apple  |  too much apples  " 1`] = `
{
  "body": {
    "cases": [
      {
        "items": [
          {
            "type": 3,
            "value": "no apples",
          },
        ],
        "type": 2,
      },
      {
        "items": [
          {
            "type": 3,
            "value": "one apple",
          },
        ],
        "type": 2,
      },
      {
        "items": [
          {
            "type": 3,
            "value": "too much apples  ",
          },
        ],
        "type": 2,
      },
    ],
    "type": 1,
  },
  "type": 0,
}
`;
